# netbox-snmp-sync

./: .dockerignore  .gitignore  COMPATIBILITY.md  Dockerfile  README.md  pyproject.toml
netbox_snmp_sync/: __init__.py  choices.py  dto.py  engine.py  filtersets.py  forms.py  if_types.py  jobs.py  models.py  navigation.py  port_names.py  snmp_collector.py  spec.py  tables.py  template_content.py  urls.py  vendors.py  views.py
netbox_snmp_sync/api/: serializers.py  urls.py  views.py
netbox_snmp_sync/migrations/: 0001_initial.py  0002_syncrun.py  0003_syncrun_reverted_syncrunobject.py  0004_snmpsyncconfig.py  0005_remove_snmpsyncconfig_default_ethernet_type_and_more.py  0006_devicesnmpconfig_last_test_message_and_more.py  0007_snmpsyncconfig_sync_at_hours.py  0008_devicesnmpconfig_schedule_state.py  0009_devicesnmpconfig_sync_job_state.py  0010_devicesnmpconfig_schedule_overrides.py  0011_snmpsyncconfig_sync_job_timeout_seconds.py  0012_syncrun_vlan_counters.py  0013_syncrunchange.py  0014_devicesnmpconfig_rename_device_to_sysname.py  0015_snmpsyncconfig_stale_job_marker_minutes.py  0016_per_device_sync_behaviour.py  0017_vlan_subinterface_inference.py  0018_missed_schedule_grace.py  0019_devicesnmpconfig_vlan_group.py  0020_sync_interval_minutes.py
netbox_snmp_sync/templates/netbox_snmp_sync/: bulk_setup.html  device_snmp_config_list.html  device_snmp_panel.html  device_snmp_tab.html  devicesnmpconfig.html  preview.html  syncrun.html  syncrun_revert.html  test_result.html
netbox_snmp_sync/tests/: test_engine.py  test_security.py  test_snmp_collector.py
